--- a/dokieli/ceur-ws.css
+++ b/dokieli/ceur-ws.css
@@ -56,6 +56,9 @@ margin-right: +8px;
         margin-top:1em !important;
         margin-right:0;
     }
+    #content {
+        page-break-before:always;
+    }
 }
 
 A:link {color: #404080; text-decoration: none;}  /* display of links */
@@ -189,6 +192,7 @@ dl {
 
 #authors {
     margin-top:3em;
+    border-bottom:2px solid gray;
 }
 #authors dt {
     font-weight:bold;
@@ -208,12 +212,15 @@ dl {
 #author-org li {
     margin-bottom:0;
 }
-#content {
-    width:100%;
-    border-top:2px solid gray;
-    padding-top:5em;
+main {
     clear:both;
 }
+main,
+.CEURFULLTITLE,
+#content {
+    padding-top:3em;
+}
+
 footer {
     padding-top:0.5em;
     margin-top:1em;
