--- a/dokieli/ceur-ws.css
+++ b/dokieli/ceur-ws.css
@@ -30,7 +30,7 @@
 /* Modified: 24-Mar-2015/M.Jeusfeld  (paper directories)  */
 /* Modified: 16-Jul-2015/C.Lange     (more accessible link colors) */
 /* Modified: 08-Feb-2016/M.Jeusfeld  (distinguidh AUX from CEURTITLES) */
-/* Modified: 21-Feb-2016/S.Capadisli (dokieli)            */
+/* Modified: 22-May-2016/S.Capadisli (dokieli)            */
 
 body {
 font-family: arial, sans-serif;
@@ -65,6 +65,7 @@ margin-right: +8px;
 A:link {color: #404080; text-decoration: none;}  /* display of links */
 A:visited {color: #404080; text-decoration: none;} /* visited links */
 A:hover {color: #000080; text-decoration: none;} /* links under the cursor */
+:target {background-color:#FFFFFF;} /* background for current fragment */
 
 H1 {color:#000000; font-family:arial, cursive, sans-serif;}
 
@@ -156,8 +157,8 @@ body > header address a:hover:after {
     bottom:0;
 }
 body > header #document-identifier {
-    float:right;
-    margin:1em 5% 0 0.5em;
+    margin:0.5em 0 0 0;
+    width:95%;
     text-align:right;
 }
 body > header #document-identifier dt {
@@ -174,8 +175,8 @@ body > header #document-identifier dd:nth-of-type(1):not([class=CEURVOLNR]) {
 
 body > header #document-license {
     color: #777777; font-size: x-small;
-    margin-top:7.5em;
-    margin-right:5%;
+    margin-top:1em;
+    width:95%;
     text-align:justify;
 }
 body > header #document-license dt,
